--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
 
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqDYwMGkjiwuyOHHX2dmKTeGnLh3JwzUg"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAqDYwMGkjiwuyOHHX2dmKTeGnLh3JwzUg"></script>
 </body>
 
 </html>
